--- a/css/style.css
+++ b/css/style.css
@@ -6208,4 +6208,52 @@ table.estimate_doc_table tbody td.price {
   background-position: -11px 0;
 }
 
+.mypoint_wrap .sum_point {
+  width: 100%;
+  text-align: center;
+  padding: 35px 0;
+  border-bottom: 1px solid #eeeeee;
+}
+.mypoint_wrap .sum_point > p {
+  font-size: 14px;
+}
+.mypoint_wrap .sum_point > strong {
+  font-size: 26px;
+  color: #FF3C58;
+}
+.mypoint_wrap .point_list_wrap > .list {
+  width: 100%;
+  height: 95px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #eeeeee;
+}
+.mypoint_wrap .point_list_wrap > .list > .content {
+  width: 50%;
+}
+.mypoint_wrap .point_list_wrap > .list > .content .date {
+  font-size: 11px;
+  color: #8B8B8B;
+  margin-bottom: 10px;
+}
+.mypoint_wrap .point_list_wrap > .list > .content .detail {
+  font-size: 12px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.mypoint_wrap .point_list_wrap > .list > .content .description {
+  font-size: 11px;
+  color: #8B8B8B;
+}
+.mypoint_wrap .point_list_wrap > .list > .price {
+  width: 50%;
+  text-align: right;
+  font-size: 12px;
+  font-weight: 700;
+}
+.mypoint_wrap .point_list_wrap > .list > .price.add {
+  color: #0071F5;
+}
+
 /*# sourceMappingURL=style.css.map */
