--- a/css/style.scss
+++ b/css/style.scss
@@ -6820,6 +6820,67 @@ table.estimate_doc_table {
 }
 
 
+.mypoint_wrap {
+	.sum_point {
+		width: 100%;
+		text-align: center;
+		padding: 35px 0;
+		border-bottom: 1px solid #eeeeee;
+
+		> p {
+			font-size: 14px;	
+		}
+
+		> strong {
+			font-size: 26px;
+			color: #FF3C58;
+		}
+		
+	}
+
+
+	.point_list_wrap {
+
+		> .list {
+			width: 100%;
+			height: 95px;
+			@include display_varible;
+			border-bottom: 1px solid #eeeeee;
+
+			> .content {
+				width: 50%;
+				.date {
+					font-size: 11px;
+					color: $color_04;
+					margin-bottom: 10px;
+				}
+				.detail {
+					font-size: 12px;
+					font-weight: 700;
+					margin-bottom: 10px;
+				}
+
+				.description {
+					font-size: 11px;
+					color: $color_04;
+				}
+			}
+
+			> .price {
+				width: 50%;
+				text-align: right;
+				font-size: 12px;
+				font-weight: 700;
+				
+				&.add {
+					color: #0071F5;
+				}
+			}
+		}
+
+	}
+}
+
 
 
 
