--- a/css/style.css
+++ b/css/style.css
@@ -6256,4 +6256,83 @@ table.estimate_doc_table tbody td.price {
   color: #0071F5;
 }
 
+/* 메인 플로팅메뉴 css */
+.main_floating_menu {
+  position: fixed;
+  width: 100%;
+  height: auto;
+  background-color: #ffffff;
+  left: 0;
+  bottom: 0;
+  z-index: 20;
+  border: 1px solid #000000;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding-bottom: 50px;
+}
+.main_floating_menu .tit {
+  position: relative;
+  width: 100%;
+  height: 65px;
+  line-height: 65px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #e3e3e3;
+}
+.main_floating_menu .tit > h2 {
+  font-size: 16px;
+  font-weight: 700;
+}
+.main_floating_menu .tit > .close_btn {
+  position: absolute;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  right: 14px;
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #eeeeee;
+  cursor: pointer;
+}
+.main_floating_menu .tit > .close_btn > i {
+  font-size: 15px;
+  color: #666666;
+}
+.main_floating_menu ul.menu_list > li {
+  height: 50px;
+}
+.main_floating_menu ul.menu_list > li > a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  color: #8B8B8B;
+  box-sizing: border-box;
+}
+.main_floating_menu ul.menu_list > li > a .icon {
+  width: 24px;
+  height: 24px;
+  background: url(../img/all_menu.png) no-repeat 0px 0px;
+  background-image: -webkit-image-set(url(../img/all_menu.png) 1x, url(../img/all_menu@2x.png) 2x, url(../img/all_menu@3x.png) 3x);
+  margin-right: 5px;
+}
+.main_floating_menu ul.menu_list > li.list_02 .icon {
+  background-position: -24px 0;
+}
+.main_floating_menu ul.menu_list > li.list_03 .icon {
+  background-position: -48px 0;
+}
+.main_floating_menu ul.menu_list > li.list_04 .icon {
+  background-position: -72px 0;
+}
+.main_floating_menu ul.menu_list > li.list_05 .icon {
+  background-position: -96px 0;
+}
+
 /*# sourceMappingURL=style.css.map */
