--- a/css/style.scss
+++ b/css/style.scss
@@ -6882,7 +6882,95 @@ table.estimate_doc_table {
 }
 
 
+/* 메인 플로팅메뉴 css */
+.main_floating_menu {
+	position: fixed;
+	width: 100%; height: auto;
+	background-color: #ffffff;
+	left: 0; bottom: 0;
+	z-index: 20;
+	border: 1px solid #000000;
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
+	box-sizing: border-box;
+	overflow: hidden;
+	padding-bottom: 50px;
 
+	.tit {
+		position: relative;
+		width: 100%; height: 65px;
+		line-height: 65px;
+		box-sizing: border-box;
+		border-bottom: 1px solid #e3e3e3;
+
+		> h2 {
+			font-size: 16px;
+			font-weight: 700;
+		}
+
+		> .close_btn {
+			@include position_var($left: auto);
+			right: 14px;
+			@include circle_img ($width: 30px, $height: 30px, $border-radius: 30px);
+			@include display_varible;
+			background-color: #eeeeee;
+			cursor: pointer;
+
+			> i {
+				font-size: 15px;
+				color: #666666;
+			}
+		}
+	}
+
+	ul.menu_list {
+		> li {
+			height: 50px;
+
+			> a {
+				width: 100%;
+				height: 100%;
+				display: flex;
+				align-items: center;
+				font-size: 15px;
+				color: $color_04;
+				box-sizing: border-box;
+
+				.icon {
+					width: 24px; height: 24px;
+					background: url(../img/all_menu.png) no-repeat 0px 0px;
+					background-image: -webkit-image-set(url(../img/all_menu.png) 1x, url(../img/all_menu@2x.png) 2x, url(../img/all_menu@3x.png) 3x);
+					margin-right: 5px;
+				}
+			}
+
+			&.list_02 {
+				.icon {
+					background-position: -24px 0;
+				}
+			}
+
+			&.list_03 {
+				.icon {
+					background-position: -48px 0;
+				}
+			}
+
+			&.list_04 {
+				.icon {
+					background-position: -72px 0;
+				}
+			}
+
+			&.list_05 {
+				.icon {
+					background-position: -96px 0;
+				}
+			}
+		}
+	}
+
+}
 
 
 
