--- a/css/common.css
+++ b/css/common.css
@@ -334,6 +334,118 @@ table {
   }
 
 
+/* 랜딩페이지 */
+.ld_container {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+
+#landing_page header > div {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#landing_page header {
+    border-bottom: 1px solid #eeeeee;
+}
+#landing_page header button {
+    height: 42px;
+    padding: 0 25px;
+    border: 1px solid #d6d6d6;
+    border-radius: 42px;
+    font-size: 14px;
+    line-height: 42px;
+}
+
+.section {
+    position: relative;
+    height: 825px;
+}
+
+#section1 {
+    position: relative;
+    height: 635px;
+    background-color: #EEF2F5;
+}   
+#section1 > div {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+
+#section1 .main_text {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 1.4em;
+    margin-bottom: 25px;
+}
+#section1
+
+#section1 > div > .text_box p {
+    font-size: 18px;
+}
+#section1 .img_box {
+    position: absolute;
+    right: 0; bottom: -95px;
+}
+#section1 .btn_wrap {
+    display: flex;
+    align-items: center;
+    margin-top: 55px;
+}
+
+#section1 .btn_wrap > button {
+    width: 190px; height: 52px;
+    background-color: #ffffff;
+    border: 1px solid #DDDDDD;
+    border-radius: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#section1 .btn_wrap > button:first-child {
+    margin-right: 15px;
+}
+#section1 .btn_wrap > button.google_app_btn > div {
+    display: inline-block;
+    width: 147px; height: 35px;
+    background: url(../img/landingPage/app_store_img.png) no-repeat top 0 left -111px;
+    background-size: cover;
+}
+
+
+#section1 .btn_wrap > button.apple_app_btn > div {
+    display: inline-block;
+    width: 112px; height: 35px;
+    background: url(../img/landingPage/app_store_img.png) no-repeat top 0 left 0;
+    background-size: cover;
+}
+
+
+
+.section > div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.section .text_box .tit {
+    font-size: 38px;
+    line-height: 1.4em;
+    font-weight: 700;
+    margin-bottom: 35px;
+}
+
+
+
+
+
 
 
 
