--- a/css/style.scss
+++ b/css/style.scss
@@ -6980,6 +6980,157 @@ table.estimate_doc_table {
 
 
 
+/* 랜딩페이지 */
+.ld_container {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+
+#landing_page header > div {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#landing_page header {
+    border-bottom: 1px solid #eeeeee;
+}
+#landing_page header button {
+    height: 42px;
+    padding: 0 25px;
+    border: 1px solid #d6d6d6;
+    border-radius: 42px;
+    font-size: 14px;
+    line-height: 42px;
+}
+
+.section {
+    position: relative;
+    height: 825px;
+}
+
+#section1 {
+    position: relative;
+    height: 635px;
+    background-color: #EEF2F5;
+}   
+#section1 > div {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+
+#section1 .main_text {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 1.4em;
+    margin-bottom: 25px;
+}
+
+#section1 .text_box p.detail {
+    font-size: 18px;
+	line-height: 1.4em;
+}
+#section1 .img_box {
+    position: absolute;
+    right: 0; bottom: -95px;
+}
+#section1 .btn_wrap {
+    display: flex;
+    align-items: center;
+    margin-top: 55px;
+}
+
+#section1 .btn_wrap > button {
+    width: 190px; height: 52px;
+    background-color: #ffffff;
+    border: 1px solid #DDDDDD;
+    border-radius: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#section1 .btn_wrap > button:first-child {
+    margin-right: 15px;
+}
+#section1 .btn_wrap > button.google_app_btn > div {
+    display: inline-block;
+    width: 147px; height: 35px;
+    background: url(../img/landingPage/app_store_img.png) no-repeat top 0 left -111px;
+    background-size: cover;
+}
+
+
+#section1 .btn_wrap > button.apple_app_btn > div {
+    display: inline-block;
+    width: 112px; height: 35px;
+    background: url(../img/landingPage/app_store_img.png) no-repeat top 0 left 0;
+    background-size: cover;
+}
+
+
+
+.section > div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.section .text_box .tit {
+	position: relative;
+    font-size: 38px;
+    line-height: 1.4em;
+    font-weight: 700;
+    margin-bottom: 35px;
+}
+.section .text_box .tit::before {
+	content: '';
+	position: absolute;
+	top: -30px; left: 0;
+	width: 45px; height: 8px;
+	background-color: #FE354D;
+
+}
+.section .text_box p.detail {
+	font-size: 16px;
+	line-height: 1.6em;
+	color: #666666;
+}
+
+#section3 {
+	background-color: #f9f9f9;
+}
+#section3 > div {
+	flex-direction: row-reverse;
+}
+
+
+
+#landing_page footer {
+	width: 100%; height: 230px;
+	background-color: #383838;
+}
+#landing_page footer > div {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+#landing_page footer span {
+	margin-top: 15px;
+	color: rgba(255,255,255,0.6);
+	font-size: 14px;
+}
+
+
+
+
 
 
 
