--- a/css/style.scss
+++ b/css/style.scss
@@ -388,10 +388,49 @@ span.date {
 		width: 25%;
 
 		a {
-			width: 100%; height: 45px;
-			padding: 5px 0;
+			width: 100%; height: auto;
+			padding: 8px 0;
 			@include display_varible;
 			flex-direction: column;
+
+			.main_icon {
+				display: inline-block;
+				width: 30px; height: 30px;
+				overflow: hidden;
+				background: url(../img/main_icon.png) 0 0;
+				background-image: -webkit-image-set(url(../img/main_icon.png) 1x, url(../img/main_icon@2x.png) 2x, url(../img/main_icon@3x.png) 3x);
+
+
+				&.live_preview {
+					background-position: -30px 0;
+				}
+
+				&.store {
+					background-position: -60px 0;
+				}
+
+				&.story {
+					background-position: -90px 0;
+				}
+
+				&.channel {
+					background-position: 0px -30px;
+				}
+
+				&.request {
+					background-position: -30px -30px;
+				}
+
+				&.product {
+					background-position: -60px -30px;
+				}
+
+				&.event {
+					background-position: -90px -30px;
+				}
+			}
+
+
 			span {
 				display: inline-block;
 				margin-top: 10px;
@@ -6941,6 +6980,7 @@ table.estimate_doc_table {
 				font-size: 15px;
 				color: $color_04;
 				box-sizing: border-box;
+				white-space: nowrap;
 
 				.icon {
 					width: 24px; height: 24px;
