--- a/css/style.scss
+++ b/css/style.scss
@@ -7283,6 +7283,81 @@ table.estimate_doc_table {
 
 
 
+.store_manage_wrap {
+	> .profile {
+		background-color: #ffffff;
+		padding: 25px 0;
+		margin-bottom: 10px;
+		border-bottom: 1px solid #eeeeee;
+	}	
+}
+
+
+.store_category_link {
+	font-size: 0;
+	border-top: 1px solid $color_01;
+
+	> div {
+		background-color: #ffffff;
+		display: inline-block;
+		width: 33.3334%; height: 90px;
+		box-sizing: border-box;
+		border-bottom: 1px solid $color_01;
+		border-right: 1px solid $color_01;
+		text-align: center;
+		font-size: 0;
+		cursor: pointer;
+
+		> div {
+			width: 100%; height: 100%;
+			@include display_varible;
+			flex-direction: column;
+			font-size: 0;
+
+			.store_img {
+				display: inline-block;
+				width: 24px; height: 24px;
+				overflow: hidden;
+				background: url(../img/store_set_icon.png) no-repeat 0 0;
+				background-image: -webkit-image-set(url(../img/store_set_icon.png) 1x, url(../img/store_set_icon@2x.png) 2x, url(../img/store_set_icon@3x.png) 3x);
+
+				&.s02 {
+					background-position: -24px 0;
+				}
+
+				&.s03 {
+					background-position: -48px 0;
+				}
+
+				&.s04 {
+					background-position: 0 -24px;
+				}
+
+				&.s05 {
+					background-position: -24px -24px;
+				}
+
+				&.s06 {
+					background-position: -48px -24px;
+				}
+
+			}
+
+
+			> span {
+				margin-top: 5px;
+				display: block;
+				font-size: 11px;
+			}
+		}
+
+		&:nth-child(3),
+		&:nth-child(6) {
+			border-right: none;
+		}
+	}
+}
+
 
 
 
