--- a/css/style.scss
+++ b/css/style.scss
@@ -7172,11 +7172,27 @@ table.estimate_doc_table {
 	width: 100%; height: 100vh;
 	display: grid;
 	// grid-template-rows: repeat(2, 1fr);
-	grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+	grid-template-columns: repeat(2, 1fr);
+	// grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 	align-items: stretch;
 	justify-content: stretch;
 	grid-auto-flow: row dense;
 }
+
+
+@media (min-width: 768px) {
+	.videoChat_wrap {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media (min-width: 1100px) {
+	.videoChat_wrap {
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+
+
 .videoChat_wrap .item {
 	width: 100%;
   	height: 100%;
