--- a/css/style.scss
+++ b/css/style.scss
@@ -253,7 +253,6 @@ $color_06: #313131;
 }
 
 
-
 /* 채널설명 css */
 p.desc {
 	font-size: 12px;
@@ -5346,9 +5345,13 @@ p.original_price {
 .title_wrap {
 	width: 100%; height: 38px;
 	background-color: #ffffff;
-	border-bottom: 1px solid #e3e3e3;
+	border-bottom: 1px solid #eeeeee;
 	box-sizing: border-box;
 	@include display_varible;
+
+	&.my_store_len {
+		justify-content: flex-start;
+	}
 
 	strong {
 		display: inline-block;
@@ -7374,7 +7377,59 @@ table.estimate_doc_table {
 	}
 }
 
+.my_store_list_wrap {
+	padding-top: 25px;
 
+	.list {
+		width: 100%; height: 70px;
+		border: 1px solid #eeeeee;
+		border-radius: 5px;
+		padding: 0 50px 0 12px;
+		box-sizing: border-box;
+		position: relative;
+		display: flex;
+		align-items: center;
+		margin-bottom: 10px;
+
+
+		.profile_img {
+			width: 44px; height: 44px;
+			border-radius: 44px;
+			margin-right: 15px;
+		}
+
+		.content {
+			p {
+				font-size: 14px;
+				font-weight: 700;
+				margin-bottom: 3px;
+			}
+
+			.store_info {
+				display: flex;
+				align-items: center;
+				> div {
+					&:first-child {
+						margin-right: 15px;
+					}
+
+					> span {
+						color: #FE354D;
+					}
+				}
+			}
+		}
+
+		.go_btn {
+			position: absolute;
+			top: 50%; right: 15px;
+			transform: translateY(-50%);
+			cursor: pointer;
+		}
+
+	}
+
+}
 
 
 
