--- a/css/style.scss
+++ b/css/style.scss
@@ -7432,6 +7432,36 @@ table.estimate_doc_table {
 }
 
 
+.mypage_notice_wrap {
+	.list {
+		cursor: pointer;
+
+		> p {
+			font-size: 14px;
+			margin-bottom: 5px;
+		}
+
+		> .info {
+			span {
+				font-size: 11px;
+				color: #9e9e9e;
+			}
+
+			strong {
+				font-size: 12px;
+				font-weight: 700;
+				color: #EB0D2F;
+			}
+		}
+
+		padding: 15px 0;
+		border-bottom: 1px solid #eeeeee;
+	}
+}
+
+
+
+
 
 
 
